force-app/main/default/objects/Stage_Configuration__c/Stage_Configuration__c.object-meta.xml
<CustomObject>
    <description>One record per tracked picklist value. Names the object, the picklist field, and the value whose duration should be measured.</description>
    <label>Stage Configuration</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Stage Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>