force-app/main/default/objects/Stage_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Tracking runs for this stage only while this is checked.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>