force-app/main/default/objects/Stage_Configuration__c/fields/Auto_Create_Field__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Include this stage when generating the four tracking fields.</description>
    <label>Auto Create Fields</label>
    <type>Checkbox</type>
</CustomField>