force-app/main/default/objects/Stage_Configuration__c/fields/Do_Not_Prefill__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Prefill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leave this stage untouched when a record enters, leaves, or skips it.</description>
    <label>Do Not Prefill</label>
    <type>Checkbox</type>
</CustomField>