force-app/main/default/objects/Stage_Configuration__c/fields/Stage_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Stage_Field_API__c</fullName>
    <label>Stage Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>