force-app/main/default/objects/Stage_Configuration__c/fields/Stage_Value__c.field-meta.xml
<CustomField>
    <fullName>Stage_Value__c</fullName>
    <label>Stage Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>